--- a/package.json
+++ b/package.json
@@ -9,13 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@next/font": "13.1.6",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-typing-effect": "^2.0.3",
+    "axios": "^1.3.4",
+    "emailjs": "^4.0.1",
+    "ityped": "^1.0.3",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-icons": "^4.7.1",
+    "sass": "^1.58.3",
+    "typescript": "4.9.5",
+    "typewriter-effect": "^2.19.0"
+  },
+  "devDependencies": {
+    "@types/ityped": "^1.0.1"
   }
 }
