--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "emailjs": "^4.0.1",
     "ityped": "^1.0.3",
     "next": "13.1.6",
+    "next-seo": "^5.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
